--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   <div class="main-img">
     <img src="./images/image-equilibrium.jpg" alt="Equilibrium img" class="eq-img">
     <div class="overlay"></div>
-    <a href="#" target="_blank"><img src="./images/icon-view.svg" alt="view img" class="icon"></a>
+    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/icon-view.svg" alt="view img" class="icon"></a>
 
   </div>
 
   <div class="content">
-    <a href="#" target="_blank">Equilibrium #3429</a>
+    <a href="https://www.frontendmentor.io" target="_blank">Equilibrium #3429</a>
     <p class="color-line">Our Equilibrium collection promotes balance and calm.</p>
   </div>
 
   <div class="cont-icon">
     <div class="them1">
-    <a href="#" target="_blank"><img src="./images/icon-ethereum.svg" alt="ethereum img"> 0.041 ETH</a>
+    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/icon-ethereum.svg" alt="ethereum img"> 0.041 ETH</a>
     </div>    
     <di class="them2 color-line">
       <p style="margin: 0;"><img src="./images/icon-clock.svg" alt="clock img"> 3 days left</p>
@@ -38,8 +38,8 @@
   <div class="line"></div>
 
   <div class="prof">
-    <a href="#" target="_blank"><img src="./images/image-avatar.png" alt="profile img" class="prof-img"></a>
-    <p class="color-line">Create of <a href="#" class="prof-name">Jules Wyvern</a></p>
+    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/image-avatar.png" alt="profile img" class="prof-img"></a>
+    <p class="color-line">Create of <a href="https://www.frontendmentor.io" class="prof-name">Jules Wyvern</a></p>
   </div>
 </div>
   
