--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="main-img">
     <img src="./images/image-equilibrium.jpg" alt="Equilibrium img" class="eq-img">
     <div class="overlay"></div>
-    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/icon-view.svg" alt="view img" class="icon"></a>
+    <img src="./images/icon-view.svg" alt="view img" class="icon">
 
   </div>
 
@@ -28,17 +28,17 @@
 
   <div class="cont-icon">
     <div class="them1">
-    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/icon-ethereum.svg" alt="ethereum img"> 0.041 ETH</a>
+    <img src="./images/icon-ethereum.svg" alt="ethereum img"> 0.041 ETH
     </div>    
-    <di class="them2 color-line">
+    <div class="them2 color-line">
       <p style="margin: 0;"><img src="./images/icon-clock.svg" alt="clock img"> 3 days left</p>
-    </di>
+    </div>
   </div>
 
   <div class="line"></div>
 
   <div class="prof">
-    <a href="https://www.frontendmentor.io" target="_blank"><img src="./images/image-avatar.png" alt="profile img" class="prof-img"></a>
+    <img src="./images/image-avatar.png" alt="profile img" class="prof-img">
     <p class="color-line">Create of <a href="https://www.frontendmentor.io" class="prof-name">Jules Wyvern</a></p>
   </div>
 </div>
