--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 </head>
 <body>
-<div role="main" class="container">
-
+<main class="main">
+  <div class="container">
+    <h1 class="sr-only" aria-hidden="true">NFT Component</h1>
   <div class="main-img">
     <img src="./images/image-equilibrium.jpg" alt="Equilibrium img" class="eq-img">
     <div class="overlay"></div>
@@ -41,7 +42,8 @@
     <img src="./images/image-avatar.png" alt="profile img" class="prof-img">
     <p class="color-line">Create of <a href="https://www.frontendmentor.io" class="prof-name">Jules Wyvern</a></p>
   </div>
-</div>
+  </div>
+</main>
   
 </body>
 </html>
