--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <main class="main">
   <div class="container">
-    <h1 class="sr-only" aria-hidden="true">NFT Component</h1>
+    <h1 class="sr-only" >NFT Component</h1>
   <div class="main-img">
     <img src="./images/image-equilibrium.jpg" alt="Equilibrium img" class="eq-img">
     <div class="overlay"></div>
