--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <h1 class="sr-only" >NFT Component</h1>
   <div class="main-img">
-    <img src="./images/image-equilibrium.jpg" alt="Equilibrium img" class="eq-img">
+    <img src="./images/image-equilibrium.jpg" alt="Equilibrium code to frontendmentor.io" class="eq-img">
     <div class="overlay"></div>
     <img src="./images/icon-view.svg" alt="view img" class="icon">
 
@@ -29,7 +29,7 @@
 
   <div class="cont-icon">
     <div class="them1">
-    <img src="./images/icon-ethereum.svg" alt="ethereum img"> 0.041 ETH
+    <img src="./images/icon-ethereum.svg" alt="ethereum code to frontendmentor.io"> 0.041 ETH
     </div>    
     <div class="them2 color-line">
       <p style="margin: 0;"><img src="./images/icon-clock.svg" alt="clock img"> 3 days left</p>
@@ -39,7 +39,7 @@
   <div class="line"></div>
 
   <div class="prof">
-    <img src="./images/image-avatar.png" alt="profile img" class="prof-img">
+    <img src="./images/image-avatar.png" alt="avatar code to frontendmentor.io" class="prof-img">
     <p class="color-line">Create of <a href="https://www.frontendmentor.io" class="prof-name">Jules Wyvern</a></p>
   </div>
   </div>
