--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <div class="main-img">
     <img src="./images/image-equilibrium.jpg" alt="Equilibrium code to frontendmentor.io" class="eq-img">
     <div class="overlay"></div>
-    <img src="./images/icon-view.svg" alt="view img" class="icon">
+    <img src="./images/icon-view.svg" alt="" aria-hidden="true" class="icon">
 
   </div>
 
   <div class="content">
-    <a href="https://www.frontendmentor.io" target="_blank">Equilibrium #3429</a>
+    <a href="https://www.frontendmentor.io" class="heading" target="_blank">Equilibrium #3429</a>
     <p class="color-line">Our Equilibrium collection promotes balance and calm.</p>
   </div>
 
@@ -32,14 +32,14 @@
     <img src="./images/icon-ethereum.svg" alt="ethereum code to frontendmentor.io"> 0.041 ETH
     </div>    
     <div class="them2 color-line">
-      <p style="margin: 0;"><img src="./images/icon-clock.svg" alt="clock img"> 3 days left</p>
+      <p style="margin: 0;"><img src="./images/icon-clock.svg" alt=""> 3 days left</p>
     </div>
   </div>
 
   <div class="line"></div>
 
   <div class="prof">
-    <img src="./images/image-avatar.png" alt="avatar code to frontendmentor.io" class="prof-img">
+    <img src="./images/image-avatar.png" alt="-personal profile-" class="prof-img">
     <p class="color-line">Create of <a href="https://www.frontendmentor.io" class="prof-name">Jules Wyvern</a></p>
   </div>
   </div>
