--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   </div>
 
   <div class="content">
-    <a href="https://www.frontendmentor.io" class="heading" target="_blank">Equilibrium #3429</a>
+    <h4>
+      <a href="https://www.frontendmentor.io" target="_blank">Equilibrium #3429</a>
+    </h4>
     <p class="color-line">Our Equilibrium collection promotes balance and calm.</p>
   </div>
 
